--- a/style-shop.css
+++ b/style-shop.css
@@ -24,7 +24,7 @@
 .navbar {
     padding: 40px;
     height: 140px;
-    width: 1300px;
+
 }
 
 .navbar-collapse {
@@ -168,7 +168,7 @@
 
 footer {
     background: #30343F;
-    width: 1300px;
+    width: 100%;
     height: 343px;
     position: absolute;
 }
