--- a/style-shop.css
+++ b/style-shop.css
@@ -41,6 +41,9 @@
         height: auto;
     }
     
+    #imagen-footer {
+        display: none;
+    }
 }
 
 /* Contenido*/
@@ -184,7 +187,7 @@ footer {
     
 }
 
-.imagen-footer {
+#imagen-footer {
     position: relative;
     right: 0px;
     top: 100px;
